Refactore code (Java).
- Changed package name of cli module.